@@ -1,5 +1,11 @@
 2008-09-05  Ulrich Weigand  <uweigand@de.ibm.com>
 
+	* rs6000-tdep.c (rs6000_gdbarch_init): Setup displaced stepping
+	*before* calling gdbarch_init_osabi.
+	(rs6000_aix_init_osabi): Disable displaced stepping.
+
+2008-09-05  Ulrich Weigand  <uweigand@de.ibm.com>
+
 	* target.c (update_current_target): Do not inherit to_open
 	or to_close.
 	(pop_target): Call target_close on target_stack instead
